--- a/D3Digger/Client/Client.vcxproj
+++ b/D3Digger/Client/Client.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -11,19 +11,21 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{3FBD2A95-D352-42F0-828F-EDB83C114809}</ProjectGuid>
+    <ProjectGuid>{6518CC23-871D-46B8-962F-AD1022F14101}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>d3d9_gen</RootNamespace>
+    <RootNamespace>Client</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
+    <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -46,7 +48,6 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ForcedIncludeFiles>stdafx.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -70,31 +71,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="IExecutor.h" />
+    <ClInclude Include="IGlobal.h" />
+    <ClInclude Include="IProxy.h" />
+    <ClInclude Include="ProxyFactory.h" />
+    <ClInclude Include="IProxyMap.h" />
     <ClInclude Include="ProxyBase.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ProxyBase_IDirect3D9.cpp" />
-    <ClCompile Include="ProxyBase_IDirect3DCubeTexture9.cpp" />
-    <ClCompile Include="ProxyBase_IDirect3DDevice9.cpp" />
-    <ClCompile Include="ProxyBase_IDirect3DIndexBuffer9.cpp" />
-    <ClCompile Include="ProxyBase_IDirect3DPixelShader9.cpp" />
-    <ClCompile Include="ProxyBase_IDirect3DStateBlock9.cpp" />
-    <ClCompile Include="ProxyBase_IDirect3DSurface9.cpp" />
-    <ClCompile Include="ProxyBase_IDirect3DSwapChain9.cpp" />
-    <ClCompile Include="ProxyBase_IDirect3DTexture9.cpp" />
-    <ClCompile Include="ProxyBase_IDirect3DVertexBuffer9.cpp" />
-    <ClCompile Include="ProxyBase_IDirect3DVertexDeclaration9.cpp" />
-    <ClCompile Include="ProxyBase_IDirect3DVertexShader9.cpp" />
-    <ClCompile Include="ProxyBase_IDirect3DVolume9.cpp" />
-    <ClCompile Include="ProxyBase_IDirect3DVolumeTexture9.cpp">
-      <PreprocessToFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</PreprocessToFile>
-    </ClCompile>
+    <ClCompile Include="ExecutorImpl.cpp" />
+    <ClCompile Include="GlobalImpl.cpp" />
+    <ClCompile Include="ProxyBase.cpp" />
+    <ClCompile Include="ProxyFactory.cpp" />
+    <ClCompile Include="ProxyMapImpl.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
