--- a/D3Digger/_Include/_Include.vcxproj.filters
+++ b/D3Digger/_Include/_Include.vcxproj.filters
@@ -30,16 +30,10 @@
     <ClInclude Include="d3d9\undef.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="d3d9\IProxy.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="d3d9\wrap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="d3d9\Global.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="d3d9\IProxyExt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="d3d9\Methods.h">
@@ -49,6 +43,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="common\signals.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="d3d9\IExecutor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="d3d9\IProxy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
