--- a/D3Digger/LocalServer/LocalServer.vcxproj
+++ b/D3Digger/LocalServer/LocalServer.vcxproj
@@ -71,6 +71,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ExecutorImpl.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
