--- a/D3Digger/LocalServer/LocalServer.vcxproj.filters
+++ b/D3Digger/LocalServer/LocalServer.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ExecutorImpl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
