server executor methods mapping

--- a/D3Digger/LocalServer/LocalServer.vcxproj.filters
+++ b/D3Digger/LocalServer/LocalServer.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="ExecutorImpl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ExecutorImplMethods.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
