--- a/D3Digger/LocalServer/LocalServer.vcxproj
+++ b/D3Digger/LocalServer/LocalServer.vcxproj
@@ -76,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ExecutorImpl.cpp" />
+    <ClCompile Include="ExecutorImplMethods.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
