works on rotating triangle example

--- a/D3Digger/Server/Server.vcxproj.filters
+++ b/D3Digger/Server/Server.vcxproj.filters
@@ -21,6 +21,15 @@
     <ClInclude Include="ProcBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ProcImpl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ProcImpl_Device.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ProcImpl_VB.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -33,6 +42,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ProcBase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ProcImpl_Device.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ProcImpl_VB.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
