--- a/D3Digger/Client/Client.vcxproj.filters
+++ b/D3Digger/Client/Client.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="ProxyImpl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ProxyImpl_VB.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ProxyImpl_Device.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ProxyImpl_VB.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
