--- a/D3Digger/Server/Server.vcxproj
+++ b/D3Digger/Server/Server.vcxproj
@@ -72,11 +72,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ProcBase.h" />
+    <ClInclude Include="ProcImpl.h" />
+    <ClInclude Include="ProcImpl_Device.h" />
+    <ClInclude Include="ProcImpl_VB.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ProcBase.cpp" />
     <ClCompile Include="ProcFactory.cpp" />
+    <ClCompile Include="ProcImpl_Device.cpp" />
+    <ClCompile Include="ProcImpl_VB.cpp" />
     <ClCompile Include="ProcMapImpl.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
