--- a/D3Digger/Client/Client.vcxproj
+++ b/D3Digger/Client/Client.vcxproj
@@ -77,6 +77,7 @@
     <ClInclude Include="ProxyBase.h" />
     <ClInclude Include="ProxyImpl.h" />
     <ClInclude Include="ProxyImpl_Device.h" />
+    <ClInclude Include="ProxyImpl_Surface.h" />
     <ClInclude Include="ProxyImpl_VB.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
@@ -85,6 +86,7 @@
     <ClCompile Include="ProxyBase.cpp" />
     <ClCompile Include="ProxyFactory.cpp" />
     <ClCompile Include="ProxyImpl_Device.cpp" />
+    <ClCompile Include="ProxyImpl_Surface.cpp" />
     <ClCompile Include="ProxyImpl_VB.cpp" />
     <ClCompile Include="ProxyMapImpl.cpp" />
     <ClCompile Include="stdafx.cpp">
