--- a/D3Digger/Server/Server.vcxproj.filters
+++ b/D3Digger/Server/Server.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="ProcImpl_VB.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ProcImpl_Surface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ProcImpl_VB.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ProcImpl_Surface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
