--- a/D3Digger/_Include/_Include.vcxproj
+++ b/D3Digger/_Include/_Include.vcxproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ClInclude Include="common\bytes.h" />
     <ClInclude Include="common\common.h" />
+    <ClInclude Include="common\asio_wrapper.h" />
     <ClInclude Include="common\interface.h" />
     <ClInclude Include="common\opt_ptr.h" />
     <ClInclude Include="common\signals.h" />
@@ -25,6 +26,7 @@
     <ClInclude Include="d3d9\Server\IProc.h" />
     <ClInclude Include="d3d9\Server\IProcMap.h" />
     <ClInclude Include="d3d9\structs_refl.h" />
+    <ClInclude Include="d3d9\structs_refl_special.h" />
     <ClInclude Include="d3d9\undef.h" />
     <ClInclude Include="d3d9\wrap.h" />
   </ItemGroup>
