--- a/D3Digger/_Include/_Include.vcxproj.filters
+++ b/D3Digger/_Include/_Include.vcxproj.filters
@@ -63,5 +63,11 @@
     <ClInclude Include="d3d9\structs_refl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="common\asio_wrapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="d3d9\structs_refl_special.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
