--- a/D3Digger/Client/Client.vcxproj.filters
+++ b/D3Digger/Client/Client.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="ProxyImpl_D3D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ProxyImpl_Query.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ProxyImpl_D3D.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ProxyImpl_Query.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
