--- a/D3Digger/Server/Server.vcxproj.filters
+++ b/D3Digger/Server/Server.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="ProcImpl_Surface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ProcImpl_Query.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ProcImpl_Surface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ProcImpl_Query.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
