--- a/D3Digger/Client/Client.vcxproj.filters
+++ b/D3Digger/Client/Client.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="ProxyImpl_Query.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ProxyImpl_IB.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -78,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ProxyImpl_Query.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ProxyImpl_IB.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
