--- a/D3Digger/Server/Server.vcxproj.filters
+++ b/D3Digger/Server/Server.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="ProcImpl_Query.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ProcImpl_IB.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ProcImpl_Query.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ProcImpl_IB.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
