--- a/D3Digger/Server/Server.vcxproj
+++ b/D3Digger/Server/Server.vcxproj
@@ -71,6 +71,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="checkProcResult.h" />
     <ClInclude Include="ProcBase.h" />
     <ClInclude Include="ProcImpl.h" />
     <ClInclude Include="ProcImpl_Device.h" />
@@ -81,6 +82,7 @@
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="checkProcResult.cpp" />
     <ClCompile Include="ProcBase.cpp" />
     <ClCompile Include="ProcFactory.cpp" />
     <ClCompile Include="ProcImpl_Device.cpp" />
