--- a/D3Digger/Server/Server.vcxproj.filters
+++ b/D3Digger/Server/Server.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="ProcImpl_IB.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="checkProcResult.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ProcImpl_IB.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="checkProcResult.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
