--- a/D3Digger/Server/Server.vcxproj.filters
+++ b/D3Digger/Server/Server.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="checkProcResult.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ExecutorMethodsImpl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +75,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="checkProcResult.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ExecutorMethodsImpl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ExecutorMethodsImpl_stuff.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
