--- a/D3Digger/_Include/_Include.vcxproj.filters
+++ b/D3Digger/_Include/_Include.vcxproj.filters
@@ -69,7 +69,7 @@
     <ClInclude Include="d3d9\structs_refl_special.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="d3d9\Server\IExecutorMethods.h">
+    <ClInclude Include="d3d9\Server\IProcMethods.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
