--- a/D3Digger/_Include/common.props
+++ b/D3Digger/_Include/common.props
@@ -3,8 +3,8 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <IncludePath>$(SolutionDir)_Include;$(BOOST_DIR);$(DXSDK_DIR)\include;$(SIMLABS_DIR)\src\_Include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(BOOST_DIR)\lib32-msvc-12.0;$(DXSDK_DIR)\Lib\x86;$(SIMLABS_DIR)\bin\$(Configuration);$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)_Include;$(SIMLABS_DIR)\src\_Include;$(SIMLABS_DIR)\ext\include;$(BOOST_DIR);$(DXSDK_DIR)\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(BOOST_DIR)\lib32-msvc-12.0;$(SIMLABS_DIR)\bin\$(Configuration);$(SIMLABS_DIR)\ext\lib\boost;$(DXSDK_DIR)\Lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
